added footer and working on about and projects page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -18,11 +18,22 @@
                 <div class="column left">
                    <img src="/images/me.jpg" class="img-thumbnail" alt="about me">
                 </div>
-                <div class="columnRight">
+
+                <section>
+                <section class="intro1"
+                <div class="basicInfo">
+
+<h1>This is Yakshi Gandhi here.</h1>
+                <p>I am studying Diploma In Computer Programming</p>
+                <p>at Georgian College</p>
+
                     <div class="text">I'm Yakshi and I'm a <span class="typing-2"></span></div>
                     <p>Computer Programmer. Have efficient skills in web development. Hands-on experience with both front-end as well as a back-end developer. Worked on projects including a user-friendly web app with a complete payment checkout. Familiar with programming languages like Java, JavaScript, HTML, CSS, SQL along with some frameworks. Which you can take a look at below.</p>
                     <a href="/images/YakshiGandhi_resume_latest(co-op).pdf">Download CV</a>
                 </div>
+                </section>
+
+
             </div>
         </div>
     </section>
