--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,14 +2,16 @@
 /* Home Style */
 body {
 
-	background: url('/images/home-pic.jpeg') no-repeat;
-	background-size: cover ;
+	background: url('/images/home-pic.jpeg') no-repeat ;
+	/* background-position: fixed;*/
+	background-size: cover; 
     backdrop-filter: blur(3px);
 	color: #cfcfcf ;
-	position: relative;
+	background-position-y: top;
+	background-position-x: center;
+	/* position: relative; */
     height: 100vh;
     width: 100vw;
-   
 }
 
 .intro-text {
@@ -28,17 +30,16 @@ H1 {
 	font-weight: bolder;
     text-transform: uppercase;
 	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-   
 }
 
- p {
-	color: rgba(196, 190, 26, 0.8);
+.intro-text p {
+	color: rgba(89, 239, 30, 0.8);
     font-family: 'Cinzel Decorative';
 	font-size: 22px;
 	font-weight: 600;
 	margin-bottom: 60px;
 	padding: 0 10px;
-	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px rgb(243, 21, 21);
 }
 
 .btn-default {
