--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -9,23 +11,45 @@ a {
 }
 
 
-/* Footer */
-/* footer {
+ footer {
 	background-color: #222222;
-	color: #777;
-	padding: 1px 0 10px 0;
+	position: fixed;
+	display: flex;
+	width: 100%;
+	left: 0;
+	bottom: 0;	
 }
+
 footer p {
 	font-size: 13px;
 	margin-top: 10px;
+	margin-left: 10px;
 	text-align: center;
 }
-footer a {
-	color: #aaa;
+
+footer div{
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
+footer i{
+    color: #3ad2b6;
+    font-size: 25px;
+    margin: 0px 15px;
+}
+footer a:hover{
+    background-color: rgb(245, 243, 243);
+}
+footer i:hover{
+    cursor: pointer;
+    font-size: 30px;
+    transition: ease-in 0.2s;
+	color: aquamarine;
+}
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
 .content {
 	padding: 40% 0 0;
 }
@@ -41,5 +65,4 @@ label {
 .hover-bg .hover-text {
 	padding: 15% 10%;
 }
-}
-  */
+} */
