--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,18 @@
 
 <body>
 
-    <img class="img-fluid">
+    {{!-- <img class="img-fluid">
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
-    </div>
+    </div> --}}
 
 
     <!-- home section start -->
         <section class="intro-text">
             <h1>Yakshi Gandhi</h1>
-            <p>I am a Computer Programmer and this is my portfolio website.</p>
-            <a href="/about" class="btn btn-default btn-lg page-scroll">Learn More</a>
-            <a href="/contact" class="btn btn-default btn-lg page-scroll">Contact Me</a>
+            <p>I am a Computer Programming student and this is my portfolio website.</p>
+            <a href="/about" class="btn btn-default btn-lg ">Learn More</a>
+            <a href="/contact" class="btn btn-default btn-lg ">Contact Me</a>
         </section>
 </body>
 
