--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 
-<!-- Bootstrap -->
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- Bootstrap -->
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  </head>
-  <body>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 
- <!-- Bootstrap Navbar -->
-<nav class="navbar navbar-dark bg-dark fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Portfolio</a>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+</head>
 
-    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Yakshi Gandhi</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-
-      <div class="offcanvas-body">
-
+<body>
+  <header>
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-dark p-4">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item"> <a class="nav-link active" aria-current="page" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
@@ -40,34 +29,35 @@
           <li class="nav-item"> <a class="nav-link" href="/contact">Contact</a> </li>
 
         </ul>
-
       </div>
     </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+  </header>
+
+  {{{body}}}
 
 
-{{!-- 
 <!--Common footer file for each and every page. It is shared file and included in every page-->
 <footer id="footer" class="navbar-fixed-bottom">
-    <section id="social-section">
-        <article class="col-md-6">
-            <article class="social">
-                <ul>
-                    <li><a href="https://www.facebook.com/yakshigandhi294"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://github.com/gandhiyakshi123"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.instagram.com/yakshi_294/"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-            </article>
-        </article>
-    </section>
-    <section class="col-md-6">
-        <p>Copyright © Yakshi Gandhi</p>
-    </section>
-</footer> --}}
+
+  <section class="col-md-6">
+    <p>Copyright © Yakshi Gandhi - All rights reserved.</p>
+  </section>
+
+    <div class="social-links">
+      <a href="https://github.com/gandhiyakshi123" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/" target="_blank"><i class="fa fa-linkedin">
+    </div>
 
 
-    {{{body}}}
-  </body>
+</footer>
+
 </html>
