--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,45 +1,105 @@
-
-
-
-    
-
-
 <link rel="stylesheet" href="/stylesheets/about.css">
 
 
 <body>
 
     <!-- about section start -->
-  
+
     <section class="about-text" id="about">
         <div class="max-width">
             <h1 class="title">About me</h2>
-            <div class="about-content">
-                <div class="column left">
-                   <img src="/images/me.jpg" class="img-thumbnail" alt="about me">
+                <div class="about-content">
+
+
+                    <section>
+                        <section class="intro1">
+
+                            <div class="columnLeft">
+                                <img src="/images/me.jpg" class="img-thumbnail" alt="about me">
+                            </div>
+
+                            <div class="columnRight">
+                                <h1>This is Yakshi Gandhi here.</h1>
+                                <p>I am studying Diploma In Computer Programming</p>
+                                <p>at Georgian College</p>
+
+                                <div>
+                                    <p>As a final year Computer Programming student, I have acquired knowledge of C,
+                                        C++,
+                                        C#, JavaScript (new JS library) frameworks, HTML, CSS, OOP Java, ASP .Net Core,
+                                        MySQL using different software applications such as, Visual Studio Code, SSMS
+                                        (SQL
+                                        Server Management Studio), Eclipse, Git, GitHub, Packet Tracer, NetBeans,
+                                        IntelliJ,
+                                        Android Studio throughout my course. I now have experience developing for iOS
+                                        and
+                                        macOS using Swift with the XCode development tool and am familiar with Apple's
+                                        Human
+                                        Interface Guidelines. I also have a basic understanding of the Software
+                                        Development
+                                        Life Cycle (SDLC) and the Unified Modelling Language (UML). In addition, I have
+                                        improved my ability to think critically, analytically, logically, and creatively
+                                        while making sound decisions in a challenging and constantly changing work
+                                        environment. In addition, I can handle several projects, pick up new skills
+                                        rapidly,
+                                        and collaborate with others in a highly effective team.</p>
+                                </div>
+                        </section>
+
+                        <section class="intro2">
+
+                            <div class="child">
+                                <img src="/images/c.png" alt="C Logo">
+                                <p>C</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/c++.png" alt="C++ Logo">
+                                <p>C++</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/java.jpg" alt="Java Logo">
+                                <p>Java</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/JS.png" alt="Javascript Logo">
+                                <p>JavaScript</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/html.png" alt="HTML Logo">
+                                <p>HTML</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/css.png" alt="CSS Logo">
+                                <p>CSS</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/swift.png" alt="Swift Logo">
+                                <p>Swift</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/aspnet.png" alt="ASP .net Logo">
+                                <p>ASP .Net</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/php.png" alt="PHP Logo">
+                                <p>PHP</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/csharp.png" alt="C# Logo">
+                                <p>C#</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/mysql.png" alt="MySQL Logo">
+                                <p>MySQL</p>
+                            </div>
+
+                        </section>
+
+
                 </div>
-
-                <section>
-                <section class="intro1"
-                <div class="basicInfo">
-
-<h1>This is Yakshi Gandhi here.</h1>
-                <p>I am studying Diploma In Computer Programming</p>
-                <p>at Georgian College</p>
-
-                    <div class="text">I'm Yakshi and I'm a <span class="typing-2"></span></div>
-                    <p>Computer Programmer. Have efficient skills in web development. Hands-on experience with both front-end as well as a back-end developer. Worked on projects including a user-friendly web app with a complete payment checkout. Familiar with programming languages like Java, JavaScript, HTML, CSS, SQL along with some frameworks. Which you can take a look at below.</p>
-                    <a href="/images/YakshiGandhi_resume_latest(co-op).pdf">Download CV</a>
-                </div>
-                </section>
-
-
-            </div>
         </div>
     </section>
 
 
 
 </body>
-
-
