--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,8 +53,8 @@
   </section>
 
     <div class="social-links">
-      <a href="https://github.com/gandhiyakshi123" target="_blank"><i class="fa fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/" target="_blank"><i class="fa fa-linkedin">
+      <a href="https://github.com/gandhiyakshi123" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </div>
 
 
