completed with the about page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -46,8 +46,9 @@
                                 </div>
                         </section>
 
-                        <section class="intro2">
+                        <h2>Programming Languages</h2>
 
+                        <section class="intro2">
                             <div class="child">
                                 <img src="/images/c.png" alt="C Logo">
                                 <p>C</p>
@@ -92,10 +93,58 @@
                                 <img src="/images/mysql.png" alt="MySQL Logo">
                                 <p>MySQL</p>
                             </div>
-
                         </section>
 
+                        <h2>Software Applications</h2>
 
+                        <section class="intro3">
+                            <div class="child">
+                                <img src="/images/vscode.png" alt="Visual Studio Code Logo">
+                                <p>Visual Studio Code</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/VS.png" alt="Visual Studio Logo">
+                                <p>Visual Studio</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/eclipse.png" alt="Eclipse Logo">
+                                <p>Eclipse</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/netbeans.png" alt="Netbeans Logo">
+                                <p>NetBeans</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/intellij.png" alt="Intellij Logo">
+                                <p>IntelliJ</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/android-studio.png" alt="Android Studio Logo">
+                                <p>Android Studio</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/xcode.png" alt="Xcode Logo">
+                                <p>Xcode</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/ssms.jpg" alt="SSMS Logo">
+                                <p>SSMS</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/PhpMyAdmin.png" alt="phpMyAdmin Logo">
+                                <p>PHP MyAdmin</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/atom.png" alt="atom Logo">
+                                <p>Atom</p>
+                            </div>
+                            <div class="child">
+                                <img src="/images/GitHub.png" alt="GitHub Logo">
+                                <p>GitHub</p>
+                            </div>
+                        </section>
+
+                        <h3></h3>
                 </div>
         </div>
     </section>
