--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,7 @@ footer i{
     color: #3ad2b6;
     font-size: 25px;
     margin: 0px 15px;
+    filter: invert(1);
 }
 footer a:hover{
     background-color: rgb(245, 243, 243);
@@ -48,21 +49,3 @@ footer i:hover{
     transition: ease-in 0.2s;
 	color: aquamarine;
 }
-
-/* @media (max-width: 768px) {
-.content {
-	padding: 40% 0 0;
-}
-}
-
-@media (max-width: 603px) {
-#menu.navbar-default {
-	background-color: rgba(0, 0, 0, 0.7);
-}
-label {
-	float: none !important
-}
-.hover-bg .hover-text {
-	padding: 15% 10%;
-}
-} */
