--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,13 +4,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
 a {
-  color: #00B7FF;
-  
+  color: #ffffff;
 }
-
-
  footer {
 	background-color: #222222;
 	position: fixed;
@@ -21,6 +17,7 @@ a {
 }
 
 footer p {
+  color: #cfcfcf;
 	font-size: 13px;
 	margin-top: 10px;
 	margin-left: 10px;
@@ -38,7 +35,7 @@ footer i{
     color: #3ad2b6;
     font-size: 25px;
     margin: 0px 15px;
-    filter: invert(1);
+    /* filter: invert(1); */
 }
 footer a:hover{
     background-color: rgb(245, 243, 243);
