--- a/views/about.hbs
+++ b/views/about.hbs
@@ -9,9 +9,8 @@
         <div class="max-width">
             <h1 class="title">About me</h2>
                 <div class="about-content">
-
-
                     <section>
+                        {{!-- *********************************************************************** --}}
                         <section class="intro1">
 
                             <div class="columnLeft">
@@ -44,11 +43,15 @@
                                         rapidly,
                                         and collaborate with others in a highly effective team.</p>
                                 </div>
+                            </div>
                         </section>
+
+                        {{!-- *********************************************************************** --}}
 
                         <h2>Programming Languages</h2>
 
                         <section class="intro2">
+
                             <div class="child">
                                 <img src="/images/c.png" alt="C Logo">
                                 <p>C</p>
@@ -94,6 +97,8 @@
                                 <p>MySQL</p>
                             </div>
                         </section>
+
+                        {{!-- *********************************************************************** --}}
 
                         <h2>Software Applications</h2>
 
@@ -144,7 +149,11 @@
                             </div>
                         </section>
 
+                        {{!-- *********************************************************************** --}}
+
+
                         <h3></h3>
+                    </section>
                 </div>
         </div>
     </section>
