--- a/public/stylesheets/projects.css
+++ b/public/stylesheets/projects.css
@@ -1,4 +1,98 @@
-
 body {
-    background-color: aquamarine;
-  }
+  color: #cfcfcf;
+  background-color: aquamarine;
+}
+.projects-text{
+  color: rgb(0, 0, 0);
+}
+h1 {
+  text-align: center;
+  font-size: xx-large;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+
+}
+
+section {
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project1 {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  place-items: center;
+  text-align: justify;
+  max-width: 100vw;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
+.contentImg{
+  align-self: center;
+}
+
+img{
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 70%;
+}
+
+.projectContent{
+  margin-bottom: auto;
+  text-align:justify;
+}
+
+h2 {
+  font-size: 2vw;
+}
+
+h3 {
+  text-align:justify;
+  font-size: large;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+}
+
+.projectContent p {
+  margin: 6px;
+  font-size: 1vw;
+}
+
+.btnToGit{
+	color: #ef114d;
+	border: 3px solid #ef114d;
+    font-family: 'Cinzel Decorative';
+	border-radius: 4px;
+    font-weight: bold;
+	margin: 0 8px;
+	font-size: 22px;
+	transition: all 0.5s;
+	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+.btnToGit:hover, .btnToGit:focus, .btnToGit.focus, .btnToGit:active, .btnToGit.active {
+	background-color: #ef114d;
+	border: 3px solid #ef114d;
+    font-family: 'Cinzel Decorative';
+	color: #eeeeee;
+} 
+
+.project2 {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  text-align: justify;
+  max-width: 100vw;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
+.project3 {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  text-align: justify;
+  max-width: 100vw;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
