--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,10 +11,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+
+     <!-- FontAwesome CDN -->
+    {{!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> --}}
 
 </head>
 
@@ -49,12 +53,12 @@
 <footer id="footer" class="navbar-fixed-bottom">
 
   <section class="col-md-6">
-    <p>Copyright © Yakshi Gandhi - All rights reserved.</p>
+    <p>Copyright © 2022 - Yakshi Gandhi - All rights reserved.</p>
   </section>
 
     <div class="social-links">
-      <a href="https://github.com/gandhiyakshi123" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/gandhiyakshi123" target="_blank"><i class="fab fa-github-square"></i></a>
+      <a href="https://www.linkedin.com/in/yakshi-gandhi-64712a200/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
 
 
