--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -5,6 +5,7 @@ body {
 
   .contact-text{
     color: black;
+    font-family: 'Libre Baskerville', serif;
   }
 
   .text-center{
@@ -18,13 +19,25 @@ body {
   h1 {
     text-align: center;
     font-size: xx-large;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Libre Baskerville', serif;
     font-weight: bolder;
 
   }
 
   h2 {
     font-size: 2vw;
+    font-weight: bolder;
+    font-family: 'Libre Baskerville', serif;
+  }
+
+  h4{
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bolder;
+  }
+
+  label{
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bold;
   }
 
   .contactPage {
@@ -33,20 +46,7 @@ body {
     padding: 10px;
   }
 
-  /* button{
-    width: 72.5%;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-    cursor: pointer;
-    background-color: black;
-    color: #a1bda4;
-}
-button:hover{
-    background-color: #a1bda4;
-    color: black;
-    transition: ease-in-out 0.4s;
-} */
+
 
 .contactInfo{
 align-self: center;
@@ -56,5 +56,23 @@ margin: auto;
 img{
   height: 2.5rem;
   width: 2.5rem;
-  margin-top: 2rem; 
+  margin-top: 1rem; 
+  border-radius: 50%;
+}
+
+img:hover {
+  height: 3rem;
+  width: 3rem;
+  transform: scale(1.4);
+  filter: brightness(1);
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  font-family: 'Libre Baskerville', serif;
+}
+a:hover{
+  color: #3e634b;
 }
