--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -20,10 +20,11 @@ body {
 	padding-right: 0;
 	padding-left: 100px;
 	padding-bottom: 0px;
+	font-family: 'Libre Baskerville', serif;
 }
 
 H1 {
-    font-family: 'Cinzel Decorative';
+    font-family: 'Libre Baskerville', serif;
 	font-size: 50px;
 	color: #f8f405;
     scrollbar-highlight-color: #ef114d;
@@ -34,7 +35,7 @@ H1 {
 
 .intro-text p {
 	color: rgba(89, 239, 30, 0.8);
-    font-family: 'Cinzel Decorative';
+    font-family: 'Libre Baskerville', serif;
 	font-size: 22px;
 	font-weight: 600;
 	margin-bottom: 60px;
@@ -59,10 +60,3 @@ H1 {
     font-family: 'Cinzel Decorative';
 	color: #eeeeee;
 } 
-/** 
-.intro-text 
-.color {
-	color: #71bd46;
-	font-weight: 700;
-}
-*/
