--- a/views/about.hbs
+++ b/views/about.hbs
@@ -42,6 +42,12 @@
                                         environment. In addition, I can handle several projects, pick up new skills
                                         rapidly,
                                         and collaborate with others in a highly effective team.</p>
+                                    
+                                    <div class="resume">
+                                        <p>Take a look on my resume below!</p>
+                                        <a href="/images/YakshiGandhi_resume_latest(co-op).pdf"
+                                            class="btn btn-default btn-lg ">Download CV</a>
+                                    </div>
                                 </div>
                             </div>
                         </section>
