completed with adding another projects

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -88,8 +88,47 @@
 
                     {{!--*******************************************************--}}
 
+                                        
+                    <section class="project4">
 
+                        <div class="contentImg">
+                            <img src="/images/movieReviews.png" alt="Can't load Image">
+                            </a>
+                        </div>
 
+                        <div class="projectContent">
+                            <h2>My Movies reviews APIs (May 2022 – August 2022)</h2>
+                            <p class="description">
+                                ▪ Built a webpage that displays articles according to the search term provided, by calling an API in JavaScript. <br>
+                            </p>
+                            <a href="https://github.com/gandhiyakshi123/Movies-Reviews-Api" target="_blank"><button
+                                    class="btnToGit">Take a peek on Source Code</button></a>
+                        </div>
+
+                    </section>
+
+                    {{!--*******************************************************--}}
+
+                                                            
+                    <section class="project5">
+
+                        <div class="contentImg">
+                            <img src="/images/to-do-list.jpg" alt="Can't load Image">
+                            </a>
+                        </div>
+
+                        <div class="projectContent">
+                            <h2>My-TO-DO-LISTS (May 2022 – August 2022)</h2>
+                            <p class="description">
+                                ▪ A task list (using JavaScript, CSS, HTML) is a prioritized list of items that need to be completed within a specific amount of time, often in the immediate future. <br>
+                            </p>
+                            <a href="https://github.com/gandhiyakshi123/My-TO-DO-LISTS" target="_blank"><button
+                                    class="btnToGit">Take a peek on Source Code</button></a>
+                        </div>
+
+                    </section>
+
+                    {{!--*******************************************************--}}
 
                 </section>
         </div>
