--- a/public/stylesheets/projects.css
+++ b/public/stylesheets/projects.css
@@ -100,3 +100,22 @@ h3 {
   padding: 20px;
   border-bottom: 1px solid black;
 }
+
+.project4 {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  text-align: justify;
+  max-width: 100vw;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
+.project5 {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  text-align: justify;
+  max-width: 100vw;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
